# youtube-codes

r4ml_candle_vs_tchrs/: Cargo.toml  README.txt
r4ml_candle_vs_tchrs/src/: candle_matmul_v1.rs  candle_matmul_v2.rs  tch_matmul_v1.rs  tch_matmul_v2.rs
r4ml_gpu_vs_cpu/: Cargo.toml  README.txt
r4ml_gpu_vs_cpu/src/: matmul_diff_gpu_cpu.rs  vector_gpu_vs_cpu.rs
r4ml_semantic_similarity/: 03_similarity.ipynb  README.txt
